# legal_chess

./: .gitignore  Cargo.toml  README.md
src/: attack.rs  board.rs  chessmove.rs  color.rs  game.rs  lib.rs
src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  position.rs  queen.rs  relative_position.rs  rook.rs  sliding_attacks.rs  sliding_moves.rs  to_piece.rs
tests/: perft.rs  perft_3.rs  perft_4.rs  perft_5.rs  perft_6.rs  perft_initial.rs  perft_kiwipete.rs
